@@ -1,4 +1,3 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.025
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "B::Hooks::AtRuntime" => "8";
@@ -33,6 +32,7 @@ requires "perl" => "v5.20.0";
 requires "strict" => "0";
 requires "true" => "v1.0.2";
 requires "warnings" => "0";
+suggests "Function::Parameters" => "2.001003";
 suggests "Future::AsyncAwait" => "0.58";
 suggests "Syntax::Keyword::MultiSub" => "0.02";
 suggests "Syntax::Keyword::Try" => "0.027";
