@@ -49,6 +49,7 @@ Perl::Critic::Policy::Moose::RequireMakeImmutable  = 0    ; for xt tests
 Syntax::Keyword::MultiSub = 0.02
 Syntax::Keyword::Try      = 0.027
 Future::AsyncAwait        = 0.58
+Function::Parameters      = 2.001003
 
 [Prereqs / TestRecommends]
 -phase = test
