@@ -2,6 +2,8 @@ Revision history for MooseX-Extended
 
 {{$NEXT}}
 
+          - Add support for a `method` keyword via Function::Parameters.
+
 0.29      2022-08-23 09:05:52 CEST
 
           - Bump minimum version of B::Hooks::AtRuntime to avoid a sporadic
